--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,4 @@
 {
-  "tabWidth": 2,
-  "useTabs": false,
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "tailwindStylesheet": "./app/globals.css",
-  "tailwindConfig": "tailwind.config.mjs"
+	"tabWidth": 4,
+	"useTabs": true
 }
