--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "fanation",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@prisma/client": "^6.2.1",
-    "axios": "^1.7.9",
-    "cookie": "^1.0.2",
-    "fanation": "file:",
-    "firebase": "^11.2.0",
-    "jose": "^5.9.6",
-    "jsonwebtoken": "^9.0.2",
-    "next": "15.1.5",
-    "prisma": "^6.2.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "bcrypt": "^5.1.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.5",
-    "postcss": "^8",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.10",
-    "tailwindcss": "^3.4.1"
-  }
+	"name": "fanation",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
+	},
+	"dependencies": {
+		"@hookform/error-message": "^2.0.1",
+		"@hookform/resolvers": "^3.10.0",
+		"@prisma/client": "^6.2.1",
+		"axios": "^1.7.9",
+		"cookie": "^1.0.2",
+		"fanation": "file:",
+		"firebase": "^11.2.0",
+		"jose": "^5.9.6",
+		"jsonwebtoken": "^9.0.2",
+		"next": "15.1.5",
+		"prisma": "^6.2.1",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0",
+		"react-hook-form": "^7.54.2",
+		"react-icons": "^5.4.0",
+		"yup": "^1.6.1"
+	},
+	"devDependencies": {
+		"bcrypt": "^5.1.1",
+		"postcss": "^8",
+		"prettier": "^3.4.2",
+		"prettier-plugin-tailwindcss": "^0.6.10",
+		"tailwindcss": "^3.4.1"
+	}
 }
