--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"firebase": "^11.2.0",
 		"jose": "^5.9.6",
 		"jsonwebtoken": "^9.0.2",
-		"next": "15.1.5",
+		"next": "^15.1.6",
 		"prisma": "^6.2.1",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
