--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
+		"pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@hookform/error-message": "^2.0.1",
@@ -24,7 +25,9 @@
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-icons": "^5.4.0",
-		"yup": "^1.6.1"
+		"yup": "^1.6.1",
+		"tailwindcss": "^3.4.1",
+		"postcss": "^8"
 	},
 	"devDependencies": {
 		"bcrypt": "^5.1.1",
