--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"@hookform/error-message": "^2.0.1",
 		"@hookform/resolvers": "^3.10.0",
 		"@prisma/client": "^6.2.1",
+		"autoprefixer": "^10.4.20",
 		"axios": "^1.7.9",
 		"cookie": "^1.0.2",
 		"fanation": "file:",
@@ -25,15 +26,13 @@
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.54.2",
 		"react-icons": "^5.4.0",
-		"yup": "^1.6.1",
-		"tailwindcss": "^3.4.1",
-		"postcss": "^8"
+		"yup": "^1.6.1"
 	},
 	"devDependencies": {
 		"bcrypt": "^5.1.1",
-		"postcss": "^8",
+		"postcss": "^8.5.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-tailwindcss": "^0.6.10",
-		"tailwindcss": "^3.4.1"
+		"tailwindcss": "^3.4.17"
 	}
 }
